kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name : frontend-proxy
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: example.com #DNS devopsbyamir.shop
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend: 
              service:
                name: opentelemetry-demo-frontendproxy
                port:
                  number: 8080
